--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.0.4
-Date: 06.09.2023
+Version: 1.0.0
+Date: 10.09.2023
+  Major Features:
+    - recipes can now be imported and exported. This allows one to freeze them and change mods 
+      mid game
   Bugfixes:
     - moved code from data stage to data-updates, allowing it to utilize all new items
     - checks now data.raw explizitly for fluids
@@ -9,7 +12,7 @@ Date: 06.09.2023
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 03.09.2023
-  Minor Features:
+  Balancing:
     - Adjusted recipe result_count to reflect the recipe cost
     - Added option to toggle item types off
   Optimizations:
@@ -21,5 +24,3 @@ Version: 0.0.1
 Date: 06.09.2023
   Info:
     - initial Release
-  Major Features:
-    - Randomize item recipe for science packs in such a way, that the game is compitable
